# bca

./: .gitignore  ABSTRACT.md  CLAUDE.md  LICENSE  PLAN.md  README.md  paper.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  impact.yml
csrc/: Makefile  cag_fast.cpp  cag_fast.dylib
examples/: demo.py
paper/: conclusion.tex  draft.md  evaluation.tex  introduction.tex  main.tex  method.tex  paper.tex  references.bib  related.tex
paper/experiments/: ablation.py  ablation_results.json  baseline_results.json  baselines.py  benchmark.py  candidates.json  capture_tracebacks.py  discover_mutations.py  discovery_report.json  eval_tasks.jsonl  eval_tasks_full.jsonl  eval_tasks_gap_fill.jsonl  eval_tasks_httpx.jsonl  eval_tasks_pydantic_ai.jsonl  eval_tasks_pydantic_ai_dev60.jsonl  eval_tasks_remaining.jsonl  eval_tasks_report.json  eval_tasks_trial.jsonl  experiment_spec.json  generate_figures.py  httpx_candidates.json  httpx_discovery_report.json  httpx_diverse_pilot.json  httpx_killed.json  httpx_pilot.json  httpx_pilot2.json  killed_mutations.json  make_httpx_tasks.py  make_pydantic_ai_tasks.py  make_tasks.py  merge_and_report.py  posthoc_analysis.py  pydantic_ai_tasks.py  router_ab.py  run_all.py  tables.tex  tasks.jsonl
paper/results/: results.json  summary.txt
paper/results/full/: results.json  summary.txt
paper/results/httpx_sanity/: bootstrap_analysis.txt  bootstrap_cis.json  decomposition.txt  edit_locality.txt  failure_diagnosis.txt  latency_cost.txt  results.json  retrieval_metrics.txt  run_metadata.json  summary.txt  summary_with_ci.txt
paper/results/httpx_sanity2/: bootstrap_analysis.txt  bootstrap_cis.json  ceiling_probe.txt  decomposition.txt  edit_locality.txt  failure_diagnosis.txt  latency_cost.txt  patch_quality.txt  results.json  (+5 more)
src/cegraph/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_graph.py  test_impact_bot.py  test_mcp.py  test_parser.py  test_search.py  test_tools.py
(+74050 files in other folders)
