[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cegraph"
version = "0.1.0"
description = "CAG-powered code intelligence — budgeted LLM context from knowledge graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CeGraph Contributors" },
]
keywords = [
    "ai",
    "cag",
    "context-assembly",
    "knowledge-graph",
    "code-analysis",
    "mcp",
    "llm",
    "developer-tools",
    "agentic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "networkx>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
search = ["numpy>=1.24"]
map = ["textual>=0.50"]
all = ["cegraph[openai,anthropic,search,map]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
cegraph = "cegraph.cli:main"

[project.urls]
Homepage = "https://github.com/akshan-main/CeGraph"
Documentation = "https://github.com/akshan-main/CeGraph#readme"
Repository = "https://github.com/akshan-main/CeGraph"
Issues = "https://github.com/akshan-main/CeGraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cegraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
